apps/ollama/ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ai-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      securityContext:
        runAsUser: 0
        supplementalGroups: [993]
      nodeSelector:
        gpu: "true"
      containers:
      - name: ollama
        securityContext:
          privileged: true
        image: robertrosenbusch/rocm6_gfx803_ollama:6.4.1_0.9.5
        resources:
          limits:
            amd.com/gpu: 1
        volumeMounts:
        - name: ollama-storage
          mountPath: /root/.ollama
        - name: dev-kfd
          mountPath: /dev/kfd
        - name: dev-dri
          mountPath: /dev/dri
        - name: sys
          mountPath: /sys
          readOnly: true
      volumes:
      - name: ollama-storage
        persistentVolumeClaim:
          claimName: ollama-pvc
      - name: dev-kfd
        hostPath:
          path: /dev/kfd
      - name: dev-dri
        hostPath:
          path: /dev/dri
      - name: sys
        hostPath:
          path: /sys
