apps/ollama/ollama-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-app
  namespace: ai-provider
spec:
  type: ExternalName
  externalName: ollama-service.ai-provider.svc.cluster.local
